--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./banner3.css">
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     <div class="side">
